fix: desc too big for 320px and below

--- a/styles/components/pra.css
+++ b/styles/components/pra.css
@@ -38,6 +38,7 @@
     
     .pra__desc{
         font-size: 0.65rem;
+        font-size: var(--size-xs);
     }
 
     .pra__img1{
